<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_likes">Post likes count</string>
    <string name="description_post_shares">Post shares count</string>
    <string name="description_post_viewed">Post viewed count</string>
    <string name="description_post_menu">Post menu</string>
    <string name="remove_post">Remove</string>
    <string name="post_text">Post text</string>
    <string name="error_empty_content">Empty post text</string>
    <string name="edit_post">Edit</string>
    <string name="chooser_share_post">Share</string>
    <string name="empty_error_content">Text is empty</string>
    <string name="video_description">Video view block</string>
    <string name="video_play_icon">Video play icon</string>
    <string name="network_error">Oppps, something goes bad. Network error</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts</string>
    <string name="attachment_description">Attachment description text</string>
    <string name="network_like_error">Error for set like. Something wrong!</string>
    <string name="network_unlike_error">Error to unset like. Something wrong.</string>
    <string name="network_post_delete_error">Error to delete post. Something wrong.</string>
    <string name="post_send_status">Post send status</string>
    <string name="have_new_posts">Fresh posts</string>
    <string name="save_post">Save</string>
    <string name="remove">Remove</string>
    <string name="image_picker_error">Image picker error</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="logout">Logout</string>
    <string name="sing_in">Sing In</string>
    <string name="sing_up">Sing Up</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
</resources>